--- a/public_html/media/css/core.css
+++ b/public_html/media/css/core.css
@@ -66,15 +66,6 @@ a {
 		text-decoration: underline;
 	}
 
-/* weird fix for chrome yellow border */
-[tabindex] {
-	border: 0;
-	outline: 0;
-}
-/* weird fix for firefox' dotted border */
-::-moz-focus-inner {
-	border: 0;
-}
 /* ie image border */
 img {
 	border: 0;
@@ -235,6 +226,8 @@ select,
 	margin-bottom: 10px;
 	padding: 4px 6px;
 	vertical-align: middle;
+	/* weird fix for chrome yellow border */
+	outline: 0;
 }
 
 input {
@@ -260,6 +253,7 @@ select,
 	padding: 4px 12px;
 	text-align: center;
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	/* fix for chrome yellow border */
 	outline: none;
 }
 .btn:hover,
@@ -272,6 +266,10 @@ select:focus,
 input:focus {
 	box-shadow: 0 0 0.5em #d1d7e5;
 	border: 1px solid #2D7DE0;
+}
+/* weird fix for firefox' dotted border */
+::-moz-focus-inner {
+	border: 0;
 }
 
 .input-append input,
