Top links show glider too

--- a/src/Views/layout.phtml
+++ b/src/Views/layout.phtml
@@ -61,9 +61,9 @@
 				</div>
 			</form>
 			<ul id="top-nav">
-				<li><a href="<?php echo IndexControllerAboutModule::url() ?>">About</a></li>
-				<li><a href="<?php echo IndexControllerPrivacyModule::url() ?>">Privacy</a></li>
-				<li><a href="<?php echo IndexControllerGlobalsModule::url() ?>">Globals</a></li>
+				<li><a class="waitable" href="<?php echo IndexControllerAboutModule::url() ?>">About</a></li>
+				<li><a class="waitable" href="<?php echo IndexControllerPrivacyModule::url() ?>">Privacy</a></li>
+				<li><a class="waitable" href="<?php echo IndexControllerGlobalsModule::url() ?>">Globals</a></li>
 			</ul>
 			<div class="clear"></div>
 		</div>
