--- a/src/Views/user-profile.phtml
+++ b/src/Views/user-profile.phtml
@@ -43,19 +43,19 @@
 			<li>
 				<a target="_blank" href="http://myanimelist.net/profile/<?php echo $viewContext->userName ?>">
 					<i class="icon-pop-out"></i>
-					MAL profile
+					<span>MAL profile</span>
 				</a>
 			</li>
 			<li>
 				<a target="_blank" href="http://myanimelist.net/animelist/<?php echo $viewContext->userName ?><?php if (Config::$sendReferrer) echo '&amp;sclick=1'; ?>">
 					<i class="icon-pop-out"></i>
-					MAL anime list
+					<span>MAL anime list</span>
 				</a>
 			</li>
 			<li>
 				<a target="_blank" href="http://myanimelist.net/mangalist/<?php echo $viewContext->userName ?><?php if (Config::$sendReferrer) echo '&amp;sclick=1'; ?>">
 					<i class="icon-pop-out"></i>
-					MAL manga list
+					<span>MAL manga list</span>
 				</a>
 			</li>
 		</ul>
