--- a/src/Views/user-ratings.phtml
+++ b/src/Views/user-ratings.phtml
@@ -1,237 +1,3 @@
-<div class="section rating-dist">
-	<h2>
-		<i data-tooltip="Count of all entries with given|rating, in a bar chart form.|Planned titles are not counted." class="icon-tooltip"></i>
-		Rating distribution
-	</h2>
-	<div class="section-body">
-		<?php if ($viewContext->ratingDistribution->getLargestGroupSize() == 0): ?>
-			<p>There is no information about any titles for this user.</p>
-			<p>Add a few titles and come back in 24 hours.<br>We'll be waiting for you.</p>
-		<?php else: ?>
-			<ul class="infobox">
-				<li>
-					<div>
-						<span class="prefix">Total rated</span>
-						<span class="subject"><?php printf('%d', $viewContext->ratingDistribution->getRatedCount()) ?></span>
-					</div>
-				</li>
-				<li>
-					<div>
-						<span class="prefix">Mean score</span>
-						<span class="subject"><?php printf('%.02f', $viewContext->ratingDistribution->getMeanScore()) ?></span>
-					</div>
-				</li>
-				<li>
-					<div>
-						<span class="prefix">Std dev.</span>
-						<span class="subject"><?php printf('%.02f', $viewContext->ratingDistribution->getStandardDeviation()) ?></span>
-					</div>
-				</li>
-			</ul>
-
-			<div class="wrapper-target">
-				<div class="target"></div>
-				<div class="clear"></div>
-			</div>
-
-			<div class="wrapper-more">
-			</div>
-
-			<script type="text/javascript">
-				$(function()
-				{
-					console.log('yo');
-					var chart = new Highcharts.Chart({
-						chart: { renderTo: $('.rating-dist .target')[0], type: 'bar', marginRight: 35 },
-						xAxis: { categories: <?php echo json_encode(array_map(function($x) { return $x == 0 ? '-' : $x; }, $viewContext->ratingDistribution->getGroupsKeys())) ?>, title: { text: 'Rating' } },
-						yAxis: { title: { text: 'Count', margin: 15 } },
-						tooltip: { formatter: function() {
-							var text;
-							if (this.x == '-') {
-								text = 'Unrated titles: ' + this.y;
-							} else {
-								text = 'Titles rated with ' + this.x + ': ' + this.y;
-							}
-							var percent = this.y * 100.0 / <?php echo max(1, $viewContext->ratingDistribution->getTotalSize()) ?>;
-							text = text + ' (' + (Math.round(percent * 100.0) / 100.0) + '%)';
-							return text;
-						} },
-						series: [ {
-							data: <?php echo json_encode(array_values($viewContext->ratingDistribution->getGroupsSizes())) ?>,
-							point: { events: { click: function(e) {
-								/*toggleMoreWrappers($('.rating-dist .wrapper-more'), {'sender': 'score', 'score': this.category});*/
-							} } }
-						} ]
-					});
-				});
-			</script>
-		<?php endif ?>
-	</div>
-</div>
-
-
-<?php
-/*
-<div class="section score-time-dist">
-	<h2>
-		<i data-tooltip="Do you waste your time on crap?|Check your time spent on 10/10 titles|(planned titles are not counted)." class="icon-tooltip"></i>
-		<?php echo ChibiRegistry::getHelper('mg')->headerLink($user, 'ratings vs. time spent') ?>
-	</h2>
-	<div class="section-body">
-		<?php if ($viewContext->scoreDistribution->getLargestGroupSize() == 0): ?>
-			<p>There is no information about any titles for this user.</p>
-			<p>Add a few titles and come back in 24 hours.<br>We'll be waiting for you.</p>
-		<?php else: ?>
-			<ul class="infobox">
-				<li>
-					<div>
-						<span class="prefix">Total time</span>
-						<span class="subject"><?php printf('%.02f', $viewContext->scoreDurationDistribution->getTotalTime() / 1440.) ?></span>
-						<span class="suffix">days</span>
-					</div>
-				</li>
-				<!--<li>
-					<div>
-						<span class="prefix">Mean score</span>
-						<span class="subject"><?php printf('%.02f', $viewContext->scoreDurationDistribution->getMeanScore()) ?></span>
-						<span class="suffix">(weighted)</span>
-					</div>
-				</li>-->
-				<li>
-					<div>
-						<div data-tooltip="Earliest time user started or finished|<?php echo $viewContext->am == Media::Manga ? 'reading' : 'watching' ?> something, or joined MAL,|was on <?php echo date('Y-m-d', $viewContext->earliestTimeKnown) ?>.">
-							<span class="prefix">Average time</span>
-								<span class="subject"><?php printf('%.02f', $viewContext->meanTime) ?></span>
-							<span class="suffix">min/day</span>
-						</div>
-					</div>
-				</li>
-			</ul>
-
-			<div class="wrapper-target">
-				<div class="target"></div>
-				<div class="clear"></div>
-			</div>
-
-			<div class="wrapper-more">
-			</div>
-
-			<script type="text/javascript">
-				$('.user-<?php echo $user->getRuntimeID() ?> .score-time-dist .target').each(function() {
-					var chart = new Highcharts.Chart({
-						chart: { renderTo: this, type: 'bar', marginRight: 15 },
-						xAxis: { categories: <?php echo json_encode(array_map(function($x) { return $x == 0 ? '-' : $x; }, $viewContext->scoreDistribution->getGroupsKeys())) ?>, title: { text: 'Rating' } },
-						yAxis: { title: {text: 'Hours spent', margin: 15 } },
-						tooltip: { formatter: function() {
-							var text;
-							if (this.x == '-') {
-								text = 'Hours spent on unrated titles: ' + Math.round(this.y * 100) / 100.0;
-							} else {
-								text = 'Hours spent on titles rated with ' + this.x + ': ' + Math.round(this.y * 100) / 100.0;
-							}
-							var percent = this.y * 100.0 / <?php echo max(1, $viewContext->scoreDurationDistribution->getTotalSize() / 60.) ?>;
-							text = text + ' (' + (Math.round(percent * 100.0) / 100.0) + '%)';
-							return text;
-						} },
-						series: [ {
-							data: <?php echo json_encode(array_map(function($x) { return $x / 60.; }, array_values($viewContext->scoreDurationDistribution->getGroupsSizes()))) ?>,
-							point: { events: { click: function(e) {
-								toggleMoreWrappers($('.score-time-dist .wrapper-more'), {'sender': 'score-time', 'score': this.category});
-							} } }
-						} ]
-					});
-				});
-			</script>
-		<?php endif ?>
-	</div>
-</div>
-
-
-
-<div class="section score-length-dist">
-	<h2>
-		<?php if ($viewContext->am == Media::Anime): ?>
-			<i data-tooltip="Do you prefer longer or shorter|series? (Movies are not counted.)" class="icon-tooltip"></i>
-		<?php else: ?>
-			<i data-tooltip="Do you prefer longer|or shorter series?" class="icon-tooltip"></i>
-		<?php endif ?>
-		<?php echo ChibiRegistry::getHelper('mg')->headerLink($user, 'Ratings vs. ' . ($viewContext->am == Media::Anime ? 'episode' : 'chapter') . ' count') ?>
-	</h2>
-	<div class="section-body">
-		<?php if ($viewContext->scoreDistribution->getLargestGroupSize() == 0): ?>
-			<p>There is no information about any titles for this user.</p>
-			<p>Add a few titles and come back in 24 hours.<br>We'll be waiting for you.</p>
-		<?php else: ?>
-			<ul class="infobox">
-				<li>
-					<div>
-						<?php $scores = array_map(function($entries) { return UserListService::getMeanScore($entries); }, $viewContext->lengthDistribution->getGroupsEntries()) ?>
-						<?php $key = array_search(max($scores), $scores) ?>
-						<?php if ($viewContext->am == Media::Anime): ?>
-							<?php list($num, $txt) = explode(' ', ChibiRegistry::getHelper('mg')->textEpisodes(str_replace('-', '&nbsp;to&nbsp;', $key))) ?>
-						<?php elseif ($viewContext->am == Media::Manga): ?>
-							<?php list($num, $txt) = explode(' ', ChibiRegistry::getHelper('mg')->textChapters(str_replace('-', '&nbsp;to&nbsp;', $key))) ?>
-						<?php endif ?>
-						<span class="prefix">Highest mean</span>
-						<span class="subject"><?php printf('%.2f', $scores[$key]) ?></span>
-					</div>
-				</li>
-
-				<li>
-					<div>
-						<?php if ($viewContext->am == Media::Anime): ?>
-							<?php list($num, $txt) = explode(' ', ChibiRegistry::getHelper('mg')->textEpisodes($key)) ?>
-						<?php elseif ($viewContext->am == Media::Manga): ?>
-							<?php list($num, $txt) = explode(' ', ChibiRegistry::getHelper('mg')->textChapters($key)) ?>
-						<?php endif ?>
-						<span class="prefix">Which is</span>
-						<span class="subject"><?php echo $num ?></span>
-						<span class="suffix"><?php echo $txt ?></span>
-					</div>
-				</li>
-			</ul>
-
-			<div class="wrapper-target">
-				<div class="target"></div>
-				<div class="clear"></div>
-			</div>
-
-			<div class="wrapper-more">
-			</div>
-
-			<script type="text/javascript">
-				$('.user-<?php echo $user->getRuntimeID() ?> .score-length-dist .target').each(function() {
-					var chart = new Highcharts.Chart({
-						chart: { renderTo: this, type: 'line', marginTop: 15, marginRight: 15 },
-						xAxis: {
-							categories: <?php echo json_encode($viewContext->lengthDistribution->getGroupsKeys()) ?>,
-							labels: { rotation: -45, align: 'right' },
-							title: { text: '<?php echo $viewContext->am == Media::Anime ? 'Episode' : 'Chapter' ?> count', margin: 15 } },
-						yAxis: { title: { text: 'Mean score', margin: 15 } },
-						tooltip: { formatter: function() {
-							var text;
-							if (this.x == '?') {
-								text = 'Mean score for titles of unknown length: ';
-							} else {
-								text = 'Mean score for titles of length ' + this.x + ': ';
-							}
-							if (this.y > 0) {
-								text += this.y.toFixed(2);
-							} else {
-								text += 'unrated!';
-							}
-							return text;
-						} },
-						series: [ {
-							data: <?php echo json_encode(array_values($scores)) ?>,
-							point: { events: { click: function(e) {
-								toggleMoreWrappers($('.score-length-dist .wrapper-more'), {'sender': 'score-length', 'length': this.category});
-							} } }
-						} ]
-					});
-				});
-			</script>
-		<?php endif ?>
-	</div>
-</div>*/
-?>
+<?php self::renderFile('user-ratings-dist', $viewContext) ?>
+<?php self::renderFile('user-ratings-time-dist', $viewContext) ?>
+<?php self::renderFile('user-ratings-length-dist', $viewContext) ?>
