--- a/src/Views/user-profile.phtml
+++ b/src/Views/user-profile.phtml
@@ -1,6 +1,8 @@
 <div class="section basic">
 	<h2>
-		<?php echo $viewContext->userName ?>&rsquo;s profile
+		<a href="<?php echo UserControllerProfileModule::url($viewContext->userName) ?>">
+			<?php echo $viewContext->userName ?>
+		</a>&rsquo;s profile
 		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', $viewContext->processed) ?>">
 			<?php echo date('M d, H:i', $viewContext->processed) ?> UTC
 		</span>
