--- a/src/Views/error-user-enqueued.phtml
+++ b/src/Views/error-user-enqueued.phtml
@@ -1,3 +1,2 @@
 <h1>User enqueued</h1>
-<p>Please visit again in a while. This message is shown only once for each
-user.</p>
+<p>Please visit again in a while. This message is shown only once for each user.</p>
