Body bottom margin

--- a/public_html/media/css/core.css
+++ b/public_html/media/css/core.css
@@ -2,7 +2,7 @@
 body {
 	overflow-y: scroll;
 	margin: 0;
-	padding: 0;
+	padding: 0 0 3em 0;
 	text-align: center;
 	background-color: white;
 	font-family: 'Open Sans', 'Verdana', 'Dejavu sans', sans-serif;
