Added expandable lists

--- a/src/Views/user-list.phtml
+++ b/src/Views/user-list.phtml
@@ -43,7 +43,7 @@
 							<td class="status status-<?php echo $row->status ?>"></td>
 
 							<td class="title" data-sorter="<?php echo Retriever::getMediaTitleText($row) ?>">
-								<a target="_blank" href="<?php echo Retriever::malLinkText($row) ?>">
+								<a target="_blank" href="<?php echo Retriever::getMalLinkText($row) ?>">
 									<?php echo Retriever::getMediaTitleText($row) ?>
 								</a>
 							</td>
