--- a/src/Views/user-menu.phtml
+++ b/src/Views/user-menu.phtml
@@ -54,3 +54,7 @@
 		</li>
 	</ul>
 </div>
+
+<input type="hidden" id="user-id" value="<?php echo $viewContext->userId ?>">
+<input type="hidden" id="user-name" value="<?php echo $viewContext->userName ?>">
+<input type="hidden" id="media" value="<?php echo Media::toString($viewContext->media) ?>">
