--- a/src/Views/user-ratings-dist.phtml
+++ b/src/Views/user-ratings-dist.phtml
@@ -38,31 +38,27 @@
 			</div>
 
 			<script type="text/javascript">
-				$(function()
-				{
-					console.log('yo');
-					var chart = new Highcharts.Chart({
-						chart: { renderTo: $('.rating-dist .target')[0], type: 'bar', marginRight: 35 },
-						xAxis: { categories: <?php echo json_encode(array_map(function($x) { return $x == 0 ? '-' : $x; }, $viewContext->ratingDistribution->getGroupsKeys())) ?>, title: { text: 'Rating' } },
-						yAxis: { title: { text: 'Count', margin: 15 } },
-						tooltip: { formatter: function() {
-							var text;
-							if (this.x == '-') {
-								text = 'Unrated titles: ' + this.y;
-							} else {
-								text = 'Titles rated with ' + this.x + ': ' + this.y;
-							}
-							var percent = this.y * 100.0 / <?php echo max(1, $viewContext->ratingDistribution->getTotalSize()) ?>;
-							text = text + ' (' + (Math.round(percent * 100.0) / 100.0) + '%)';
-							return text;
-						} },
-						series: [ {
-							data: <?php echo json_encode(array_values($viewContext->ratingDistribution->getGroupsSizes())) ?>,
-							point: { events: { click: function(e) {
-								/*toggleMoreWrappers($('.rating-dist .wrapper-more'), {'sender': 'score', 'score': this.category});*/
-							} } }
-						} ]
-					});
+				var chart = new Highcharts.Chart({
+					chart: { renderTo: $('.rating-dist .target')[0], type: 'bar', marginRight: 35 },
+					xAxis: { categories: <?php echo json_encode(array_map(function($x) { return $x == 0 ? '-' : $x; }, $viewContext->ratingDistribution->getGroupsKeys())) ?>, title: { text: 'Rating' } },
+					yAxis: { title: { text: 'Count', margin: 15 } },
+					tooltip: { formatter: function() {
+						var text;
+						if (this.x == '-') {
+							text = 'Unrated titles: ' + this.y;
+						} else {
+							text = 'Titles rated with ' + this.x + ': ' + this.y;
+						}
+						var percent = this.y * 100.0 / <?php echo max(1, $viewContext->ratingDistribution->getTotalSize()) ?>;
+						text = text + ' (' + (Math.round(percent * 100.0) / 100.0) + '%)';
+						return text;
+					} },
+					series: [ {
+						data: <?php echo json_encode(array_values($viewContext->ratingDistribution->getGroupsSizes())) ?>,
+						point: { events: { click: function(e) {
+							toggleMoreWrappers($('.rating-dist .wrapper-more'), {'sender': 'ratings', 'filter-param': this.category});
+						} } }
+					} ]
 				});
 			</script>
 		<?php endif ?>
