--- a/public_html/media/css/infobox.css
+++ b/public_html/media/css/infobox.css
@@ -1,4 +1,4 @@
-.wrapper-target { width: 79%; }
+.target-wrapper { width: 79%; }
 ul.infobox { float: right; width: 20%; max-width: 20%; overflow: hidden; list-style-type: none; text-align: center; display: table; padding: 0; margin: 0; }
 ul.infobox li { margin-bottom: 1em; display: table-row; }
 ul.infobox li>div { display: table-cell; vertical-align: middle; }
