--- a/src/Views/error-user-blocked.phtml
+++ b/src/Views/error-user-blocked.phtml
@@ -1,4 +1,3 @@
 <h1>User blocked.</h1>
 
-<p><?php echo $viewContext->userName ?>  requested to block their profile from
-being displayed here.</p>
+<p><?php echo $viewContext->userName ?>  requested to block their profile from being displayed here.</p>
